manifests/labs/gateway/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-workshop-app
  namespace: workshop-gateway
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: workshop-app
  to:
    - group: ""
      kind: Service
