manifests/labs/gateway/httproute-crossns.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-crossns-route
  namespace: workshop-app
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: workshop-gateway
      namespace: workshop-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: podinfo-frontend
          namespace: workshop-gateway
          port: 9898
