manifests/labs/gateway/httproute-simple.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-route
  namespace: workshop-gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: workshop-gateway
      namespace: workshop-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/info
      backendRefs:
        - name: podinfo-backend
          port: 9898
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: podinfo-frontend
          port: 9898
