manifests/labs/gateway/httproute-weighted.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-weighted-route
  namespace: workshop-gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: workshop-gateway
      namespace: workshop-gateway
      sectionName: http
  rules:
    - backendRefs:
        - name: podinfo-frontend
          port: 9898
          weight: 90
        - name: podinfo-backend
          port: 9898
          weight: 10
